Engine improvements
Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

Engine tweaks

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

Parse tools tests

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

Ruby docker image

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>

Ruby docker image

Signed-off-by: Prabhu Subramanian <prabhu@appthreat.com>